# actor_lidar

./: CMakeLists.txt  README.md  package.xml  tiny_lidar.rviz
cfg/: Lidar2D.cfg  actor_lidar.cfg  tiny_lidar.cfg
launch/: Lidar2D.launch  lidar_only.launch  tiny_lidar.launch
scripts/: Lidar2D_node.py  tiny_lidar.py
src/: actor_lidar_node.cpp
